--- a/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/list/itemList.jspf
@@ -95,7 +95,7 @@
  </div>
 
 
- <div class="full_area0 itemList <h:outputText id="lblLoggedIn" value='loggedIn' rendered='#{LoginHelper.loggedIn}' />">
+ <div class="full_area0 itemList <h:outputText value='loggedIn' rendered='#{LoginHelper.loggedIn}' />">
  	<div class="full_area0 listHeader">
  		<span class="free_area0_p8 endline itemSelectArea">
  			<input type="button" id="btCheckboxSelectButton" class="min_imgBtn checkboxSelectButton"/>
