--- a/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
+++ b/pubman/pubman_presentation/src/main/webapp/editItem/LocatorsGroup.jspf
@@ -22,8 +22,8 @@
 
 
             Copyright 2006-2009 Fachinformationszentrum Karlsruhe Gesellschaft
-            für wissenschaftlich-technische Information mbH and Max-Planck-
-            Gesellschaft zur Förderung der Wissenschaft e.V.
+            fï¿½r wissenschaftlich-technische Information mbH and Max-Planck-
+            Gesellschaft zur Fï¿½rderung der Wissenschaft e.V.
             All rights reserved. Use is subject to license terms.
              */
 %>
@@ -33,7 +33,7 @@
 
 <h:panelGroup layout="block" id="editLocator" styleClass="full_area0 itemBlock"  rendered="#{!(genre.locators_display == 'false' && genre.locators_form_id == 'full-submission' || genre.locators_display == 'false' && genre.locators_form_id == 'all')}">
 	<h3 class="xLarge_area0_p8 endline blockHeader">
-		<h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/>
+		<h:outputText id="txtLocatorTitle" value="#{genre.locators_label}" converter="GenreLabelConverter"/>
 	</h3>
 	<span class="seperator"></span>
 	<div class="free_area0 itemBlockContent endline">
@@ -43,27 +43,27 @@
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{(locator.locator == null || locator.locator == '') && locator.index == 0 }" >
 
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblLocator}" rendered="#{genre.locators_display != 'false'}"/><span class="noDisplay">: </span>
+					&#160;<h:outputText id="txtAddLocator" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblLocator}" rendered="#{genre.locators_display != 'false'}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputLabel styleClass="quad_label" value="#{lbl.EditItem_lblURL}" />
-					<h:inputText styleClass="quad_txtInput" value="#{locator.locator}" />
+					<h:outputLabel id="lblTitleAddUrl" styleClass="quad_label" value="#{lbl.EditItem_lblURL}" />
+					<h:inputText id="inpAddUrl" styleClass="quad_txtInput" value="#{locator.locator}" />
 				</span>
 				<span class="large_area0_p8 lineToolSection">
-					<tr:commandButton styleClass="free_txtBtn groupBtn" text="#{lbl.EditItem_lnkSave}" shortDesc="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
+					<tr:commandButton id="btnSaveUrl" styleClass="free_txtBtn groupBtn" text="#{lbl.EditItem_lnkSave}" shortDesc="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
 				</span>
 			</h:panelGroup>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine" rendered="#{(locator.locator == null || locator.locator == '') && locator.index > 0 }" >
 
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblNewLocator}"/><span class="noDisplay">: </span>
+					&#160;<h:outputText id="txtMultiAddLocator" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_optional != 'true'}" /><h:outputText value="#{lbl.EditItem_lblNewLocator}"/><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
-					<h:outputLabel styleClass="quad_label" value="#{lbl.EditItem_lblURL}" />
-					<h:inputText styleClass="quad_txtInput" value="#{locator.locator}" />
+					<h:outputLabel id="lblMultiTitleAddUrl" styleClass="quad_label" value="#{lbl.EditItem_lblURL}" />
+					<h:inputText id="inpMultiAddUrl" styleClass="quad_txtInput" value="#{locator.locator}" />
 				</span>
 				<span class="large_area0_p8 lineToolSection">
-					<tr:commandButton styleClass="free_txtBtn groupBtn" text="#{lbl.EditItem_lnkSave}" shortDesc="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
+					<tr:commandButton id="btnMultiSaveUrl" styleClass="free_txtBtn groupBtn" text="#{lbl.EditItem_lnkSave}" shortDesc="#{tip.EditItem_lnkSave}" action="#{EditItem.saveLocator}" />
 				</span>
 			</h:panelGroup>
 
@@ -75,16 +75,16 @@
 						&#160;<span class="noDisplay"> </span>
 					</b>
 					<span class="xHuge_area0 xTiny_marginLExcl endline">
-						<h:outputText value="#{locator.locator}" />
+						<h:outputText id="txtShowLocator" value="#{locator.locator}" />
 					</span>
 				</h:panelGroup>
 				<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{(locator.locator != null && locator.locator != '')}">
 
 					<b class="xLarge_area0_p8 endline labelLine clear">
-						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_content_category_display != 'true'}" /><h:outputText value="#{genre.locators_component_content_category_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
+						&#160;<h:outputText id="txtLocatorMandatoryField" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_content_category_display != 'true'}" /><h:outputText value="#{genre.locators_component_content_category_label}" converter="GenreLabelConverter"/><span class="noDisplay">: </span>
 					</b>
 					<span class="double_area0 xTiny_marginLExcl xTiny_marginRIncl">
-						<h:selectOneMenu styleClass="double_select replace" value="#{locator.file.contentCategory}" >
+						<h:selectOneMenu id="selLocatorContentCategory" styleClass="double_select replace" value="#{locator.file.contentCategory}" >
 	        				<f:selectItems value="#{EditItem.contentCategories}" />
 	       				</h:selectOneMenu>
 					</span>
@@ -94,19 +94,19 @@
 <%-- Locator name, Locator visibility --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{(locator.locator != null && locator.locator != '')}">
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" /><h:outputText value="#{lbl.EditItem_lblFileProperties}" /><span class="noDisplay">: </span>
+					&#160;<h:outputText id="txtTitleLocatorName" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" /><h:outputText value="#{lbl.EditItem_lblFileProperties}" /><span class="noDisplay">: </span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:panelGroup styleClass="xDouble_area0 tiny_marginRIncl" rendered="#{!(genre.locators_component_name_display == 'false' && genre.locators_component_name_form_id == 'full-submission' || genre.locators_component_name_display == 'false' && genre.locators_component_name_form_id == 'all')}">
 						<label class="xDouble_label"><span class="mandatory" title="<h:outputText value='#{msg.mandatoryField}' />"><h:outputText value="*" rendered="#{genre.files_component_name_optional != 'true'}" /></span><h:outputText value="#{genre.locators_component_name_label}" converter="GenreLabelConverter"/></label>
-						<h:inputText styleClass="xDouble_txtInput" value="#{locator.file.defaultMetadata.title.value}" />
+						<h:inputText id="inpLocatorName" styleClass="xDouble_txtInput" value="#{locator.file.defaultMetadata.title.value}" />
 					</h:panelGroup>
 					<h:panelGroup styleClass="large_area0 endline" rendered="#{!(genre.locators_component_visibility_display == 'false' && genre.locators_component_visibility_form_id == 'full-submission' || genre.locators_component_visibility_display == 'false' && genre.locators_component_visibility_form_id == 'all')}">
 						<h:panelGroup styleClass="large_area0">
-							<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_visibility_optional != 'true'}" />
-							<h:outputText value="#{genre.locators_component_visibility_label}" converter="GenreLabelConverter"/>
+							<h:outputText id="txtTitleLocatorVisibilityRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_visibility_optional != 'true'}" />
+							<h:outputText id="txtTitleLocatorVisibility" value="#{genre.locators_component_visibility_label}" converter="GenreLabelConverter"/>
 						</h:panelGroup>
-						<h:selectOneRadio styleClass="small_radioBtn large_area0" value="#{locator.file.visibility}">
+						<h:selectOneRadio id="selLocatorVisibility" styleClass="small_radioBtn large_area0" value="#{locator.file.visibility}">
 							<f:selectItems value="#{EditItem.visibilities}" />
 						</h:selectOneRadio>
 					</h:panelGroup>
@@ -117,12 +117,12 @@
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{(locator.locator != null && locator.locator != '') }">
 				<h:panelGroup rendered="#{!(genre.locators_component_description_display == 'false' && genre.locators_component_description_form_id == 'full-submission' || genre.locators_component_description_display == 'false' && genre.locators_component_description_form_id == 'all')}">
 					<b class="xLarge_area0_p8 endline labelLine clear">
-						&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_description_optional != 'true'}" /><span class="noDisplay"> </span>
+						&#160;<h:outputText id="txtTitleLocatorDescription" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="#{genre.locators_component_description_optional != 'true'}" /><span class="noDisplay"> </span>
 					</b>
 					<span class="xHuge_area0 xTiny_marginLExcl endline">
 						<span class="xDouble_area0 tiny_marginRIncl">
-							<h:outputLabel styleClass="xDouble_label" value="#{genre.locators_component_description_label}" converter="GenreLabelConverter"/>
-							<h:inputTextarea styleClass="xDouble_txtArea inputTxtArea" value="#{locator.file.description}" cols="15" rows="3" />
+							<h:outputLabel id="txtTitleInputLocatorDescription" styleClass="xDouble_label" value="#{genre.locators_component_description_label}" converter="GenreLabelConverter"/>
+							<h:inputTextarea id="inpLocatorDescription" styleClass="xDouble_txtArea inputTxtArea" value="#{locator.file.description}" cols="15" rows="3" />
 						</span>
 					</span>
 				</h:panelGroup>
@@ -131,29 +131,29 @@
 <%-- Copyright Statement, Copyright Date, Licence --%>
 			<h:panelGroup layout="block" styleClass="free_area0 endline itemLine noTopBorder" rendered="#{(locator.locator != null && locator.locator != '') }">
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" /><h:outputText value="#{lbl.EditItem_lblRights}" /><span class="noDisplay">:</span>
+					&#160;<h:outputText id="txtTitleCopyrightInfo" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" /><h:outputText value="#{lbl.EditItem_lblRights}" /><span class="noDisplay">:</span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl endline">
 					<h:panelGroup styleClass="xDouble_area0 tiny_marginRIncl" rendered="true">
 						<h:outputLabel styleClass="xDouble_label">
-							<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
-							<h:outputText value="#{lbl.EditItem_lblCopyrightStatement}" />
+							<h:outputText id="txtTitleCopyrightStatementRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" />
+							<h:outputText id="txtTitleCopyrightStatement" value="#{lbl.EditItem_lblCopyrightStatement}" />
 						</h:outputLabel>
 						<h:inputTextarea styleClass="xDouble_txtArea inputTxtArea" value="#{locator.file.defaultMetadata.rights}" cols="15" rows="3" rendered="true"/>
 					</h:panelGroup>
 					<span class="large_area0 xTiny_marginRIncl">
-						<h:outputLabel styleClass="large_label labelToTextAreaBottom" value="#{lbl.EditItem_lblCopyrightDate}" />
+						<h:outputLabel id="txtTitleCopyrightStatementInput" styleClass="large_label labelToTextAreaBottom" value="#{lbl.EditItem_lblCopyrightDate}" />
 						<h:inputText id="locatorLicenseDate" styleClass="large_txtInput dateJSInput" value="#{locator.file.defaultMetadata.copyrightDate}" />
 					</span>
 				</span>
 				<b class="xLarge_area0_p8 endline labelLine clear">
-					&#160;<h:outputText styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" /><span class="noDisplay">:</span>
+					&#160;<h:outputText id="txtMandatoryFieldRequired" styleClass="mandatory" title="#{msg.mandatoryField}" value="*" rendered="false" /><span class="noDisplay">:</span>
 				</b>
 				<span class="xHuge_area0 xTiny_marginLExcl licenseArea endline">
 					<h:panelGroup styleClass="quad_area0" rendered="true">
-						<label class="quad_label"><span class="mandatory" title="<h:outputText value='#{msg.mandatoryField}' />"><h:outputText value="*" rendered="false"/></span><h:outputText value="#{lbl.EditItem_lblLicencingInfo}"/></label>
-						<h:inputText styleClass="xDouble_txtInput tiny_marginRIncl licenseURL" value="#{locator.file.defaultMetadata.license}"/>
-						<tr:goButton text="#{lbl.EditItem_btnSelectCCLicense}" styleClass="large_txtBtn groupBtn ccLicense" onclick="$(this).parents('.licenseArea').find('.messageArea').find('.ccContent').html($('#CCScriptTag').val()); var actualCCContent = $(this).parents('.licenseArea').find('.messageArea').find('.ccContent'); window.setTimeout(function (){ $(actualCCContent).append($('head').children('div')); $(actualCCContent).parents('.messageArea').removeClass('noDisplay');},1000);"/>
+						<label class="quad_label"><span class="mandatory" title="<h:outputText id="txtLicensingInfoRequired" value='#{msg.mandatoryField}' />"><h:outputText id="txtLicensingInfoRequired2" value="*" rendered="false"/></span><h:outputText value="#{lbl.EditItem_lblLicencingInfo}"/></label>
+						<h:inputText id="inpLicensingInfo" styleClass="xDouble_txtInput tiny_marginRIncl licenseURL" value="#{locator.file.defaultMetadata.license}"/>
+						<tr:goButton id="btnLicensingInfo" text="#{lbl.EditItem_btnSelectCCLicense}" styleClass="large_txtBtn groupBtn ccLicense" onclick="$(this).parents('.licenseArea').find('.messageArea').find('.ccContent').html($('#CCScriptTag').val()); var actualCCContent = $(this).parents('.licenseArea').find('.messageArea').find('.ccContent'); window.setTimeout(function (){ $(actualCCContent).append($('head').children('div')); $(actualCCContent).parents('.messageArea').removeClass('noDisplay');},1000);"/>
 					</h:panelGroup>
 					<h:panelGroup id="cc_js_widget_container" styleClass="xHuge_area2_p8 messageArea noDisplay" style="margin-top: -1.82em;">
 						<input type="button" onclick="$(this).parents('.messageArea').addClass('noDisplay');" value=" " class="min_imgBtn quad_marginLIncl fixMessageBlockBtn"/>
@@ -162,13 +162,13 @@
 				     </h:panelGroup>
 				</span>
 				<span class="large_area0_p8 lineToolSection">
-					<tr:commandButton styleClass="min_imgBtn sectionTool remove" text=" " shortDesc="#{tip.EditItem_removeLoc}" action="#{locator.removeLocatorEditItem}" rendered="#{genre.locators_repeatable != 'false'}"/>	
-					<tr:commandButton styleClass="min_imgBtn sectionTool add" text=" " shortDesc="#{tip.EditItem_addLoc}" action="#{EditItem.addLocator}" disabled="#{EditItem.locators[EditItem.numberOfLocators-1].locator == null || EditItem.locators[EditItem.numberOfLocators-1].locator == '' }" rendered="#{genre.locators_repeatable != 'false'}"/>
+					<tr:commandButton id="btnAddLicensingInfo" styleClass="min_imgBtn sectionTool remove" text=" " shortDesc="#{tip.EditItem_removeLoc}" action="#{locator.removeLocatorEditItem}" rendered="#{genre.locators_repeatable != 'false'}"/>	
+					<tr:commandButton id="btnRemoveLicensingInfo" styleClass="min_imgBtn sectionTool add" text=" " shortDesc="#{tip.EditItem_addLoc}" action="#{EditItem.addLocator}" disabled="#{EditItem.locators[EditItem.numberOfLocators-1].locator == null || EditItem.locators[EditItem.numberOfLocators-1].locator == '' }" rendered="#{genre.locators_repeatable != 'false'}"/>
 				</span>
 			</h:panelGroup>
 
 		</tr:iterator>
-		<a class="free_area0 collapse"><h:outputText value="#{lbl.ViewItemFull_lblHideGroup} " /> <h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/></a>	
+		<a class="free_area0 collapse"><h:outputText id="txtViewItemFull_lblHideGroupLocators" value="#{lbl.ViewItemFull_lblHideGroup} " /> <h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/></a>	
 	</div>
-	<a class="free_area0 expand"><h:outputText value="#{lbl.ViewItemFull_lblShowGroup} " /> <h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/></a>
+	<a class="free_area0 expand"><h:outputText id="txtViewItemFull_lblShowGroupLocators" value="#{lbl.ViewItemFull_lblShowGroup} " /> <h:outputText value="#{genre.locators_label}" converter="GenreLabelConverter"/></a>
 </h:panelGroup>
